Creating Virtual Machine Base

--- a/WindowsFormsApp4.csproj
+++ b/WindowsFormsApp4.csproj
@@ -53,11 +53,11 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Machine.cs" />
-    <Compile Include="MachinePart.cs" />
+    <Compile Include="Lpt.cs" />
     <Compile Include="MachineParts.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VirtualMachine.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
